projects/service-sync/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-sync-ingress
  annotations:
  #  kubernetes.io/ingress.class: alb
    # alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/target-type: instance
    # alb.ingress.kubernetes.io/load-balancer-name: service-sync-ingress
    # alb.ingress.kubernetes.io/backend-protocol: HTTP
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'  
spec:
  ingressClassName: nginx
  rules:
  - host: "poop"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api
            port:
              number: 9090
